[package]
name = "cargo-license-hound"
description = "Tool to help sniffing out licenses from all crate dependencies"
license = "MIT"
version = "0.1.0"
authors = ["Magnus Hoff <maghoff@gmail.com>"]

[dependencies]
cargo = "0.22"
itertools = "0.7"
toml = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
