[package]
name = "cargo-license-hound"
description = "Tool to help sniffing out licenses from all crate dependencies"
license = "MIT"
version = "0.1.0"
authors = ["Magnus Hoff <maghoff@gmail.com>"]

[dependencies]
base64 = "0.7"
cargo = "0.22"
itertools = "0.7"
lazy_static = "0.2"
regex = "0.2"
reqwest = "0.8.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.4"
try_opt = "0.1.1"
