[package]
name = "cargo-license-hound"
description = "Tool to help sniffing out licenses from all crate dependencies"
license = "MIT"
version = "0.1.0"
authors = ["Magnus Hoff <maghoff@gmail.com>"]

[dependencies]
base64 = "0.12.1"
cargo = "0.45"
itertools = "0.9"
lazy_static = "1.4.0"
regex = "1.3.9"
reqwest = { version = "0.10.6", features = ["blocking"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.5"
